--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
-name: Make test
+name: Build test
 on: [push]
-
 jobs:
-  build:
+  Run-Build-Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
