--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,11 @@ jobs:
   Run-Build-Test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Download repo
+      uses: actions/checkout@v3
     - name: Download dependencies
-    run: |
-      bash download_libraries.sh
+      run: |
+        bash download_libraries.sh
     - name: Run make
-    run: |
-      make -j4
+      run: |
+        make -j4
