--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        sudo apt install -y arm-none-eabi-gcc
+        sudo apt install -y gcc-arm-none-eabi
     - name: Download dependencies
       run: |
         bash download_libraries.sh
