Fix standalone CLI for modular ad9910 driver

--- a/Tools/StandaloneCLI/Makefile
+++ b/Tools/StandaloneCLI/Makefile
@@ -1,6 +1,7 @@
 FLAGS = -O2 -D"STANDALONE_CLI_APP" -I"../../include/"
+OBJS = sequencer.o uart_cli.o units.o ad9910/units.o performance.o stubs.o
 
-standalone_cli.elf: sequencer.o uart_cli.o units.o ad9910.o performance.o stubs.o
+standalone_cli.elf: $(OBJS)
 	@echo " [LD]" $@
 	@$(CC) $(FLAGS) $^ -o $@ -lreadline
 
@@ -12,5 +13,9 @@ standalone_cli.elf: sequencer.o uart_cli.o units.o ad9910.o performance.o stubs.
 	@echo " [CC]" $<
 	@$(CC) $(FLAGS) -c -o $@ $<
 
+ad9910/%.o: ../../ad9910/%.c
+	@echo " [CC]" $<
+	@$(CC) $(FLAGS) -c -o $@ $<
+
 clean:
-	rm -f *.o *.elf
+	rm -f $(OBJS) *.elf
